log
Wed, Mar 26, 2025  8:35:31 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:40:00 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: 'List {aka struct List}' has no member named 'size'
     list->size = 0;
         ^~
Compilation failed
b693226
Wed, Mar 26, 2025  8:40:19 AM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
ef315ad
Wed, Mar 26, 2025  8:40:50 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9b6540b
Wed, Mar 26, 2025  8:42:42 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
180c9ec
Wed, Mar 26, 2025  8:45:18 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2b5eedb
Wed, Mar 26, 2025  8:48:11 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a446fe3
Wed, Mar 26, 2025  8:49:23 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
31d4e67
Wed, Mar 26, 2025  9:03:56 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:67:5: error: expected ',' or ';' before 'list'
     list->current->next = nodoActual;
     ^~~~
list.c: In function 'nextList':
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d85bc0e
Wed, Mar 26, 2025  9:04:42 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e6edbfb
Wed, Mar 26, 2025  9:05:35 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
740992e
Wed, Mar 26, 2025  9:07:43 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
0a4f367
Wed, Mar 26, 2025  9:08:26 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
da233c7
Wed, Mar 26, 2025  9:19:54 AM: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
dac921a
Wed, Mar 26, 2025  9:25:01 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5ba584d
Wed, Mar 26, 2025  9:26:41 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7ebb5c4
Wed, Mar 26, 2025  9:28:51 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
fe3738a
Wed, Mar 26, 2025  9:30:27 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
7238b28
Wed, Mar 26, 2025  9:31:52 AM: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
45e3ab9
Wed, Mar 26, 2025  9:36:24 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
d03196d
Wed, Mar 26, 2025  9:39:08 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:61:9: error: called object 'list' is not a function or function pointer
     if (list(list->head)){
         ^~~~
list.c:59:23: note: declared here
 void pushFront(List * list, void * data) {
                       ^~~~
Compilation failed
66cb2ad
Wed, Mar 26, 2025  9:39:27 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7b202c8
Wed, Mar 26, 2025  9:41:25 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6e5432a
Wed, Mar 26, 2025  9:43:18 AM: 
 list.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:65:11: error: redefinition of 'nodoActual'
     Node *nodoActual = createNode(data);
           ^~~~~~~~~~
list.c:60:11: note: previous definition of 'nodoActual' was here
     Node *nodoActual = createNode(data);
           ^~~~~~~~~~
Compilation failed
52f03cf
Wed, Mar 26, 2025  9:49:09 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:65:11: error: redefinition of 'nodoActual'
     Node* nodoActual = createNode(data);
           ^~~~~~~~~~
list.c:60:11: note: previous definition of 'nodoActual' was here
     Node *nodoActual = createNode(data);
           ^~~~~~~~~~
Compilation failed
753c49e
Wed, Mar 26, 2025  9:49:43 AM: 
 list.c | 7 -------
 1 file changed, 7 deletions(-)
 tests:  0|0
37853ee
Wed, Mar 26, 2025  9:52:38 AM: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
82621e7
Wed, Mar 26, 2025  9:53:52 AM: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:49:29: error: 'list->current' is a pointer; did you mean to use '->'?
         return list->current.data;
                             ^
                             ->
Compilation failed
dbc63e6
Wed, Mar 26, 2025  9:54:16 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d2891d6
Wed, Mar 26, 2025  9:55:14 AM: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
0fd7119
Wed, Mar 26, 2025  9:55:55 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f27b0c3
Wed, Mar 26, 2025  9:56:29 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1fa3f0a
Wed, Mar 26, 2025  9:58:31 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
feb9abc
Wed, Mar 26, 2025 10:02:00 AM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
1e105e1
Wed, Mar 26, 2025 10:02:35 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
55f8c7e
Wed, Mar 26, 2025 10:06:48 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
309172b
Wed, Mar 26, 2025 10:10:04 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
0687225
Wed, Mar 26, 2025 10:12:46 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
2622d97
Wed, Mar 26, 2025 10:13:54 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
00337b8
